# cracen

./: .drone.yml  .gitignore  .gitmodules  CMakeLists.txt  Cage.hpp  Doxygen.conf  FindAcqiris.cmake  LICENSE.md  Makefile  README.md  cracenConfig.cmake  doxygen.conf  graybatConfig.cmake  zmq_signaling
Config/: Example.ini
Pflichtenheft/: .gitignore  Host.md  LevenbergMarquardt.tex  Makefile  Pflichtenheft.tex  Speichertransfer.md
communicationPolicy/: BMPI.hpp
data/: scope.ini
doc/: .gitignore  Doxygen.conf  Doxygen.ini  Makefile  Manual.md  dacqn.cpp
doc/html/: Constants_8h.html  Constants_8h_source.html  DataReader_8h_source.html  LevMarq_8h.html  LevMarq_8h_source.html  Node_8h_source.html  OutputStream_8h_source.html  Ringbuffer_8h_source.html  Textures_8h_source.html  Types_8h_source.html  annotated.html  classDataReader-members.html  classDataReader.html  classNode-members.html  classNode.html  classOutputStream-members.html  classOutputStream.html  classRingbuffer-members.html  classRingbuffer.html  classes.html  dir_650d82db24a6311fa7658fced19ae149.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_abd880db5973a936a512583fcfc44005.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  globals_vars.html  index.html  md_README.html  pages.html  structOutput-members.html  structOutput.html  structfitData-members.html  structfitData.html  test__DataReader_8h_source.html  test__Ringbuffer_8h_source.html
doc/latex/: Constants_8h.tex  LevMarq_8h.tex  annotated.tex  classDataReader.tex  classNode.tex  classOutputStream.tex  classRingbuffer.tex  dir_650d82db24a6311fa7658fced19ae149.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_abd880db5973a936a512583fcfc44005.tex  doxygen.sty  files.tex  md_README.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc  structOutput.tex  structfitData.tex
example/: anyrecv.cpp  chain.cpp  gol.cc  ring.cc  ring.cpp
graphPolicy/: BGL.hpp
include/: Cage.hpp  Cave.hpp  utils.hpp
include/Acqiris/: AcqirisIvi.h  AgMD1.h  AgMD1Fundamental.h  AgMD1FundamentalDataTypes.h  AgMD1FundamentalErrorCodes.h  ivi.h  visatype.h
include/communicationPolicy/: MinBMPI.hpp
include/elegant-progressbars/: Doxyfile  README.md
include/graybat/: .drone.yml  CMakeLists.txt  Cage.hpp  Edge.hpp  LICENSE.md  README.md  Vertex.hpp  doxygen.conf  graybatConfig.cmake  graybatConfigVersion.cmake  version.hpp
include/graybat/communicationPolicy/: BMPI.hpp  ZMQ.hpp
include/graybat/communicationPolicy/bmpi/: Config.hpp
include/graybat/communicationPolicy/zmq/: Config.hpp  Context.hpp
include/graybat/example/: anyrecv.cpp  chain.cc  chain.cpp  forward.cc  forward.cpp  gol.cpp  ring.cpp
include/graybat/example/zmq/: publish_subscribe.cpp  request_reply.cc  request_reply.cpp
include/graybat/graphPolicy/: BGL.hpp  Traits.hpp
include/graybat/include/: graybat.hpp
include/graybat/include/communicationPolicy/: BMPI.hpp
include/graybat/include/elegant-progressbars/: .gitignore  CMakeLists.txt  LICENSE
include/graybat/include/elegant-progressbars/cmake/: elegant-progressbarsConfig.cmake
include/graybat/include/elegant-progressbars/examples/: progressbar_example.cpp
include/graybat/include/elegant-progressbars/include/elegant-progressbars/: Hourglass.hpp  Label.hpp  Pattern.hpp  Percentage.hpp  fancyProgressbar.hpp  fancyProgressbar_legacy.hpp  policyProgressbar.hpp  printPattern_legacy.hpp  printTime_legacy.hpp
include/graybat/include/graphPolicy/: BGL.hpp
include/graybat/include/graybat/: Cage.hpp
include/graybat/include/graybat/communicationPolicy/: BMPI.hpp  Base.hpp  MinBMPI.hpp  Traits.hpp  ZMQ.hpp
include/graybat/include/graybat/communicationPolicy/bmpi/: Context.hpp  Event.hpp
include/graybat/include/graybat/communicationPolicy/zmq/: Event.hpp
include/graybat/include/graybat/graphPolicy/: BGL.hpp
include/graybat/include/graybat/mapping/: Filter.hpp
include/graybat/include/graybat/pattern/: FullyConnected.hpp  Grid.hpp  OutStar.hpp  Ring.hpp
include/graybat/include/graybat/utils/: MultiKeyMap.hpp
include/graybat/include/graybat/utils/hana/include/boost/hana/fwd/: adapt_struct.hpp
include/graybat/include/graybat/utils/hana/test/functional/: reverse_partial.cpp
include/graybat/include/mapping/: Consecutive.hpp  Roundrobin.hpp
include/graybat/include/pattern/: GridDiagonal.hpp  HyperCube.hpp
include/graybat/mapping/: Consecutive.hpp  GraphPartition.hpp  Random.hpp  Roundrobin.hpp
include/graybat/pattern/: BiStar.hpp  Chain.hpp  EdgeLess.hpp  FullyConnected.hpp  GridDiagonal.hpp  HyperCube.hpp  InStar.hpp  None.hpp
include/graybat/test/: BMPIUT.cpp  CageUT.cpp  CommunicationPolicyUT.cpp  UT.cpp  VertexUT.cpp  ZMQUT.cpp
include/graybat/utils/: MultiKeyMap.hpp  exclusivePrefixSum.hpp  serialize_tuple.hpp  zmq_env.sh  zmq_signaling_server.cpp
include/graybat/utils/doxygen/: cage.dox  communicationPolicy.dox  event.dox  gol.dox
include/graybat/utils/unittests/: CageUT.cc
include/mapping/: GraphPartition.hpp
include/pattern/: Grid.hpp  (+2 more)
pattern/: BidirectionalStar.hpp
slides/: .gitignore  Architektur.eps  Datareader.eps  EMAS.eps  Logo-HZDR-EPS-(weiß).eps  Logo-HZDR-EPS.eps  Makefile  Ringbuffer.eps  Slides.aux  Slides.nav  Slides.out  Slides.tex  Slides.toc  TU_Logo_SW.eps  TaskDescription.xcf  Threadchart.eps  handicapped.ps  tudbeamer.cls  tudbook.cls  tudfax.cls  tudform.cls  tudhaus.cls  tudletter.cls  tudthesis.sty
src/: .gitignore  BenchReader.cpp  Constants.h  Constants.hpp  Cracen.hpp  CudaStopWatch.hpp  DataReader.cpp  DataReader.cu  DataReader.h  DataReader.hpp  DataWriter.cpp  Device.hpp  Dsp.cpp  Dsp.cu  FileReader.cpp  FileWriter.cpp  FitFunction.h  FitFunction.hpp  FitFunctor.h  FitFunctor.hpp  Fitter.cpp  GaussJordan.h  GaussJordan.hpp  LevMarq.c  LevMarq.cu  LevMarq.h  LevMarq.hpp  LevMarq_test.cu  Makefile  Makefile_old  MatMul.hpp  Matrix.h  Node.cpp  Node.cu  Node.h  Node.hpp  OutputStream.cpp  OutputStream.cu  OutputStream.h  OutputStream.hpp  (+22 more)
test/: CageUT.cpp  EdgeUT.cpp
utils/: zmq_signaling_server.cpp
(+153 files in other folders)
